# pyhdlcontroller

./: .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  hdlcontroller.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: settings.yml
.github/workflows/: test_and_publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  overview.rst  usage.rst
docs/modules/: hdlcontroller.rst
hdlcontroller/: __init__.py  cli.py  hdlcontroller.py
test/: test.py
tests/unit/: test_controller.py
