[project]
name = "hdlcontroller"
version = "0.5.2"
description = "HDLC controller"
readme = "README.rst"
requires-python = ">= 3.7, <4"
license = {file = "LICENSE"}
keywords = ["hdlc", "controller"]
authors = [
  {name = "Paul-Emmanuel Raoul", email = "skyper@skyplabs.net"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "python4yahdlc >= 1.3.5",
  "pyserial >= 3.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ruff",
]

docs = [
  "sphinx >= 1.4.0",
  "sphinxcontrib-seqdiag >= 0.8.5",
  "sphinx-argparse >= 0.2.2",
  "sphinx_rtd_theme",
]

tests = [
  "tox"
]

[project.urls]
documentation = "https://python-hdlc-controller.readthedocs.io/en/latest"
repository = "https://github.com/SkypLabs/python-hdlc-controller"

[project.scripts]
hdlc-tester = "hdlcontroller.cli:main"

[tool.isort]
profile = "black"

[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
]
build-backend = "setuptools.build_meta"
